fix(): Arrumado responsividade de títulos Nas páginas Equipe.jsx, Sprint.jsx, Tasks.jsx e Projetos.jsx foi arrumado um erro de responsividade css dos títulos e descrições de divrsos componentes, que quebravam se o conteúdo fosse grande demais. Também foi adicionado um estilo para a scrollbar do site todo, que aparece em diversos lugares.

--- a/projeto-rjm/src/ui/styles/Projetos/Projetos.module.css
+++ b/projeto-rjm/src/ui/styles/Projetos/Projetos.module.css
@@ -28,6 +28,10 @@
 
 .tituloProj {
     height: 30px;
+    justify-self:baseline;
+    max-width: 90%;
+    overflow: hidden;
+    text-overflow: ellipsis;
     text-align: start;
     font-size: 20px;
 
@@ -36,6 +40,9 @@
 .descricaoProj {
     display: flex;
     text-align: justify;
+    overflow-y: auto;
+    word-break: break-all;
+    height: 50%;
     left: 0;
 
 }
@@ -244,7 +251,7 @@
     min-height: 90vh;
     grid-template-columns: 20vw 79vw;
     grid-template-rows: 15vh 73vh;
-    
+    overflow-x: hidden;
 
     
 }
@@ -257,6 +264,9 @@
 .tituloFlex{
     display:flex;
     justify-content: center;
+    overflow: hidden;
+    overflow-wrap: break-word;
+    
 }
 
 .bttCriarEquipe {
@@ -285,4 +295,24 @@
     left: 50%;
     top: 50%;
     color: white;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #212a36;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #333f52;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #42536b;
 }
