--- a/projeto-rjm/src/ui/styles/Tasks/Tasks.module.css
+++ b/projeto-rjm/src/ui/styles/Tasks/Tasks.module.css
@@ -92,6 +92,9 @@
 
 .tituloPagina {
     color: #BE5FDB;
+    overflow: hidden;
+    line-break: anywhere;
+    text-overflow: ellipsis;
 }
 
 .navEquipes {
@@ -105,7 +108,7 @@
     min-height: 90vh;
     grid-template-columns: 20vw 79vw;
     grid-template-rows: 15vh calc(85vh - 60px);
-
+    overflow-x: hidden;
 
 
 }
